<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_JobReporter" Id="{6ddb0b70-fc20-473e-9f2a-690319fd5c5a}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_JobReporter IMPLEMENTS InterfaceJobEventReporter
VAR_INPUT
END_VAR
VAR_OUTPUT
	event : JobEventReport;
	executing : JobEventReport;
	scope_task_triggers: ARRAY [0..10] OF BOOL;
	log_view: ARRAY [0..3, 0..19] OF T_MaxString;
END_VAR
VAR
	_fbDatabaseRecorder : REFERENCE TO BufferedRecord;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="_record_scope" Id="{da5a3ea4-84d4-4601-b7d3-3a0ce75af056}">
      <Declaration><![CDATA[METHOD _record_scope : BOOL
VAR_INPUT
	event : JobEventReport;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
IF event.task_name = 'Tilt forwards' THEN
		IF event.new_state = 'process' THEN
			scope_task_triggers[0] := TRUE;
		ELSIF event.new_state = 'quit' THEN
			scope_task_triggers[0] := FALSE;
		END_IF
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="_record_sqldb" Id="{42f60782-a7a6-47a0-ab99-3c440f4711af}">
      <Declaration><![CDATA[METHOD _record_sqldb : BOOL
VAR_INPUT
	event : JobEventReport;
END_VAR

]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Property Name="fbDatabaseRecorder" Id="{eb855fb2-8524-4145-9f8d-bc1fcb6c8dc6}">
      <Declaration><![CDATA[PROPERTY fbDatabaseRecorder : REFERENCE TO BufferedRecord]]></Declaration>
      <Set Name="Set" Id="{813a8d4a-7af9-4fe6-8471-7080b0561eb4}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[_fbDatabaseRecorder REF= fbDatabaseRecorder;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Method Name="report" Id="{d2542430-59b7-4888-a551-078a3a508271}">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD report : BOOL
VAR_INPUT
	old_state	: bajp_jobmgmt.E_FutureExecutionState;
	new_state	: bajp_jobmgmt.E_FutureExecutionState;
	record_time	: bajp_jobmgmt.T_FILETIME64;
	executor	: REFERENCE TO bajp_jobmgmt.FB_Executor;
END_VAR
VAR_INST
	fb_timezone_info : FB_GetTimeZoneInformation := (bExecute := TRUE);
    // Datetime utilities
    fbDtUtil : FB_DatetimeUtilities;
	db_record_data : ST_database_job_event;
END_VAR
VAR
	text : T_MaxString;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[//For log
event.old_state := TO_STRING(old_state);
event.new_state := TO_STRING(new_state);
event.record_time := FILETIME64_TO_ISO8601(fileTime := record_time, nBias := DINT_TO_INT(fb_timezone_info.tzInfo.bias), bUTC := TRUE,nPrecision := 6);
event.job_id := executor.id;
event.task_name := executor.future.future_name;
event.erro_id := executor.nErrorID;

// _record_scope(event);
//_record_sqldb(event);

IF new_state = E_FutureExecutionState.process THEN
	executing := event;
END_IF

IF old_state = E_FutureExecutionState.process OR new_state = E_FutureExecutionState.process THEN

	// Report to ADS Log
	text := event.record_time;
	text := CONCAT(text, '	');
	text := CONCAT(text, event.new_state);
	text := CONCAT(text, '		');
	text := CONCAT(text, event.task_name);
	text := CONCAT(text, '		');
	text := CONCAT(text, event.job_id);
	ADSLOGSTR(msgCtrlMask := ADSLOG_MSGTYPE_LOG, msgFmtStr := text, strArg := '');	

	
	// Report to HMI
	MEMCPY(ADR(log_view[0,1]), ADR(log_view[0,0]), SIZEOF(log_view[0,0]) * 19);
	MEMCPY(ADR(log_view[1,1]), ADR(log_view[1,0]), SIZEOF(log_view[0,0]) * 19);
	MEMCPY(ADR(log_view[2,1]), ADR(log_view[2,0]), SIZEOF(log_view[0,0]) * 19);
	MEMCPY(ADR(log_view[3,1]), ADR(log_view[3,0]), SIZEOF(log_view[0,0]) * 19);
	log_view[0,0] := event.record_time;
	log_view[1,0] := event.task_name;
	IF old_state = E_FutureExecutionState.process THEN
		log_view[2,0] := 'END';
	ELSE
		log_view[2,0] := 'START';
	END_IF
	log_view[3,0] := event.job_id;
	
END_IF


// For Database
// Windowsの時刻ロケールデータとの同期等を行うため常時実行
fbDtUtil();

IF __ISVALIDREF(_fbDatabaseRecorder) THEN
	// 記録用の構造体へのデータ登録
	// fbDtUtil.Filetime_To_UnixT()でマイクロ秒精度のUNIX時間を取得する
	db_record_data.datetime := fbDtUtil.Filetime_To_UnixT(F_GetSystemTime());
	db_record_data.old_state := event.old_state;
	db_record_data.new_state := event.new_state;
	db_record_data.task_name := event.task_name;
	db_record_data.job_id := event.job_id;
	db_record_data.erro_id := executor.nErrorID;
	
	_fbDatabaseRecorder.write(ADR(db_record_data));	
END_IF

report := TRUE;]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_JobReporter">
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_JobReporter._record_scope">
      <LineId Id="16" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="11" Count="1" />
      <LineId Id="14" Count="1" />
      <LineId Id="13" Count="0" />
      <LineId Id="10" Count="0" />
    </LineIds>
    <LineIds Name="FB_JobReporter._record_sqldb">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_JobReporter.fbDatabaseRecorder.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_JobReporter.report">
      <LineId Id="130" Count="0" />
      <LineId Id="10" Count="1" />
      <LineId Id="15" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="127" Count="0" />
      <LineId Id="141" Count="0" />
      <LineId Id="48" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="76" Count="0" />
      <LineId Id="75" Count="0" />
      <LineId Id="77" Count="1" />
      <LineId Id="49" Count="1" />
      <LineId Id="112" Count="1" />
      <LineId Id="53" Count="6" />
      <LineId Id="111" Count="0" />
      <LineId Id="110" Count="0" />
      <LineId Id="94" Count="1" />
      <LineId Id="60" Count="0" />
      <LineId Id="104" Count="2" />
      <LineId Id="93" Count="0" />
      <LineId Id="108" Count="0" />
      <LineId Id="98" Count="0" />
      <LineId Id="101" Count="1" />
      <LineId Id="99" Count="1" />
      <LineId Id="109" Count="0" />
      <LineId Id="92" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="142" Count="1" />
      <LineId Id="146" Count="2" />
      <LineId Id="179" Count="0" />
      <LineId Id="149" Count="0" />
      <LineId Id="182" Count="9" />
      <LineId Id="181" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="16" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>